--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 
 body {
-    background-color: rgb(0);
+    background-color: rgb(200,200,200);
     color: rgb(0,0,0);
     font-family: "Open Sans", sans-serif;
     text-align: center;
@@ -9,7 +9,7 @@ body {
 #content {
     display: block;
     margin-left: auto;
-    margin-right: auto
+    margin-right: auto;
 }
 
 header {
